--- a/css/style.css
+++ b/css/style.css
@@ -2,24 +2,121 @@ body {
     font-family: Arial, sans-serif;
 }
 
-header{
-    background-image: url('/img/banner.jpg');
-    background-size: cover;
-    background-position: center;
+.navbar{
+    background: linear-gradient(90deg, #3D3936, #9E6944);
 }
 
-h1, h2 {
-    font-weight: bold;
+
+.navbar .nav-item{
+    margin-right: 40px;
 }
+
+.navbar-nav .nav-item:last-child {
+    margin-right: 0; /* Elimina el margen del último elemento */
+}
+
+.carousel-caption h5{
+    font-size: 2rem;
+    font-weight: bold;
+    color: beige;
+}
+
+
+.carousel-item img {
+    height: 460px;
+    object-fit: cover;
+}
+
+.carousel-caption {
+    animation: fadeIn 1.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+#rutas-recomendadas .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+#rutas-recomendadas .card img {
+    height: 200px;
+    object-fit: cover;
+}
+
+#rutas-recomendadas .btn {
+    margin-top: auto;
+}
+
+.rating i {
+    font-size: 1rem;
+    margin-right: 2px;
+}
+
+.blockquote-footer {
+    font-weight: bold;
+    font-size: 0.9rem;
+}
+
 
 footer {
     font-size: 0.9rem;
 }
 
-.navbar {
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    background-color: #92B4CF;
+
+/* CONTACTO */
+
+#contacto h2{
+    font-size: 2rem;
+    font-weight: bold;
+    color: #333;
+}
+
+#contacto form .form-control{
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+
+#contacto form .btn{
+    background-color: #007bff;
+    color: white;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+#contacto form .btn:hover{
+    background-color: #0056b3;
+}
+
+
+#contacto .list-unstyled li {
+    margin-bottom: 15px;
+    font-size: 1rem;
+    color: #555;
+    display: flex;
+    align-items: center;
+}
+
+#contacto .list-unstyled li i {
+    font-size: 1.5rem;
+    margin-right: 10px;
+    color: #007bff;
+}
+
+
+
+#contacto .list-unstyled li a:hover {
+    text-decoration: underline;
 }
 
