--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .navbar{
@@ -31,6 +31,7 @@ body {
     animation: fadeIn 1.5s ease-in-out;
 }
 
+/* animacion txt banner */
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -68,7 +69,6 @@ body {
     font-size: 0.9rem;
 }
 
-
 footer {
     font-size: 0.9rem;
 }
@@ -99,6 +99,7 @@ footer {
     background-color: #0056b3;
 }
 
+/*datos empresa*/
 
 #contacto .list-unstyled li {
     margin-bottom: 15px;
@@ -114,9 +115,97 @@ footer {
     color: #007bff;
 }
 
-
-
 #contacto .list-unstyled li a:hover {
     text-decoration: underline;
+}
+
+/* DESTINOS*/
+
+#destinos {
+    background-color: #f9f9f9;
+    padding: 50px 0;
+}
+
+#destinos .card{
+    border: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* mueve al poner el raton encima*/
+#destinos .card:hover{
+    transform: translateY(-10px);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+#destinos .card-img-top{
+    height: 250px;
+    object-fit: cover;
+}
+
+#destinos h5{
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+
+
+/*PLAYA*/
+
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%; /* tarjetas mismo alto */
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.card-img-top {
+    height: 200px;
+    object-fit: cover;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.card-body {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-title {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.card-text {
+    color: #555;
+    font-size: 0.95rem;
+    margin-bottom: auto; /* Empuja hacia abajo cualquier contenido adicional */
+}
+
+.card a {
+    text-decoration: none;
+    color: #fff;
+    padding: 8px 16px;
+    border-radius: 5px;
+    display: inline-block;
+    transition: background-color 0.3s ease;
+    margin-top: 10px; /* Añade espacio entre el texto y el botón */
+    align-self: flex-start; /* Evita que el botón ocupe todo el ancho */
+}
+
+/* uniformidad en el contenedor de tarjetas */
+.row.g-4 > * {
+    display: flex;
 }
 
